--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,7 +4,9 @@
     --color-primary-darker: #F59E0B;
     --color-secondary: #FFFFF0;
     --color-font-black: #000000;
-    --color-font-blue: #0E1735;
+    --color-font-blue-darker: #0E1735;
+    --color-font-blue-lighter: #3C4563;
+    --color-font-grey: #888B97;
 }
 
 body,
