--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,6 +10,13 @@
 }
 
 body,
-html {
+html, #root {
+  height: 100%;
   font-family: Roboto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
