add home page styles

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -7,6 +7,7 @@
     --color-font-blue-darker: #0E1735;
     --color-font-blue-lighter: #3C4563;
     --color-font-grey: #888B97;
+    --color-hover: #678987;
 }
 
 body,
